--- a/views/foods/_form.erb
+++ b/views/foods/_form.erb
@@ -1,11 +1,18 @@
   <label for="name">Name</label>
-  <input id="name" type="text" name='food[name]' <% if @food %><value="<%= @food.name %>"><% end %><br>
+  <input id="name" type="text" name='food[name]' <% if @food %><value="<%= @food.name %>"><% end %>
+  <br>
+  <br>
   
   <label for="cuisine">Cuisine</label>
-  <input id="cuisine" type="text" name='food[cuisine]'<% if @food %> value="<%= @food.cuisine %>"><% end %><br>
+  <input id="cuisine" type="text" name='food[cuisine]'<% if @food %> value="<%= @food.cuisine %>"><% end %>
+  <br>
+  <br>
   
   <label for="price">Price</label>
-  <input id="price" type="integer" name='food[price]'<% if @food %> value="<%= @food.price %>"><% end %><br>
+  <input id="price" type="integer" name='food[price]'<% if @food %> value="<%= @food.price %>"><% end %>
+  <br>
+  <br>
   
   <label for="allergens">Allergens</label>
-  <input id="allergens" type="text" name='food[allergens]'<% if @food %> value="<%= @food.allergens %>"><% end %><br>
+  <input id="allergens" type="text" name='food[allergens]'<% if @food %> value="<%= @food.allergens %>"><% end %>
+  <br>
