--- a/views/foods/edit.erb
+++ b/views/foods/edit.erb
@@ -10,3 +10,5 @@
   <input type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Remove Item">
 </form>
+
+<a href="/foods">Cancel</a>
