--- a/views/foods/index.erb
+++ b/views/foods/index.erb
@@ -1,7 +1,7 @@
 <h2>Menu Items</h2>
 	<ul>
   	<% @foods.each do |food| %>
-    	<li><a href="/foods/<%= food.id %>"><%=food.name%></a></li>
+    	<li class="Orders"><a href="/foods/<%= food.id %>"><%=food.name%></a></li>
   	<% end %>
 	</ul>
 	<a href="/foods/new">Add a new item to the menu</a><br>
