--- a/views/index.erb
+++ b/views/index.erb
@@ -2,10 +2,12 @@
 	<head>
 		<title>EasyWaiter</title>
 	</head>
-	<body>
-		Welcome to EasyWaiter!  Use the links below to get started!
-	</body><br>
-	<a href="/foods">See the Menu</a><br>
-	<a href="/parties">See the Patrons</a><br>
-	<a href="/orders">Take an Order</a>
+	<h1>Welcome to EasyWaiter!</h1>
+	<h2>Use the nav bar to get started.</h2>
+		<body>
+			<p>
+		EasyWaiter is an interactive web app that allows for waiters and waitresses to take orders online.  The app will track all the patrons that enter the restaurant to eat.  You can also add and remove items from your menu.  The simple checkout options paired with a suggested tip and automatic bill calculation makes the experience easy and user-friendly. 
+			</p>
+		</body>
+		<br>
 </html>
