--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>EasyWaiter</title>
-    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/stylesheets/styles.css">
   </head>
   <body>
     <header>
