--- a/views/static/navigation.erb
+++ b/views/static/navigation.erb
@@ -1,4 +1,9 @@
-<!-- <nav>
-  This should be a navbar
+<nav class="navbar">
+	<ul>
+		<li><a href="/">Home</a></li>
+  	<li><a href="/foods">Menu</a></li>
+  	<li><a href="/parties">Parties</a></li>
+  	<li><a href="/parties/new">Add a Party</a></li>
+  	<li><a href="/foods/new">Add a Menu Item</a></li>
+	</ul>
 </nav>
- -->
